--- a/tests/fixtures/cmd_trigger_fixt.yml
+++ b/tests/fixtures/cmd_trigger_fixt.yml
@@ -1,50 +1,260 @@
 1:
 	tid: 1
 	version: 1
-	cat: 'General'
-	trigger: 'trig'
-	alias: 'alias1'
-	desc: 'Description 1'
-	instr: 'Instructions for trig1'
-	syntax: 'Syntax for trig1'
+	cat: 'Tele'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
 	status: 1
 2:
 	tid: 1
 	version: 2
-	cat: 'General'
-	trigger: 'trig1'
-	alias: 'alias1'
-	desc: 'Description 1'
-	instr: 'Instructions 1'
-	syntax: 'Syntax for trig1'
+	cat: 'Teleport'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
 	status: 1
 3:
 	tid: 2
 	version: 1
-	cat: 'General'
-	trigger: 'trig2'
-	alias:
-	desc: 'Description 2'
-	instr: 'Instructions 2'
-	syntax: 'Syntax for trig2'
+	cat: 'Economy'
+	trigger: 'balance'
+	alias: 'bal, money'
+	desc: 'Gives the current balance of a player'
+	instr: 'If you specify a player you will be given the balance'
+	syntax: '/<command> [player name]'
 	status: 1
 4:
 	tid: 3
 	version: 1
 	cat: 'General'
-	trigger: 'trig3'
-	alias:
-	desc: 'Description 3'
-	instr: 'Instructions 3'
-	syntax: 'Syntax for trig3'
+	trigger: 'help'
+	alias: ''
+	desc: 'This displays the help commands for essentials.'
+	instr: 'The commands shown will be limited by permissions'
+	syntax: '/<command> [searchterm [2;3;4;5; etc...]'
 	status: 1
 5:
 	tid: 4
 	version: 1
 	cat: 'General'
-	trigger: 'trig4'
-	alias:
-	desc: 'Deleted trigger'
-	instr: 'Instructions 4'
-	syntax: 'Syntax for trig4'
+	trigger: 'depth'
+	alias: ''
+	desc: 'Displays your current block depth in relation to sea level'
+	instr: 'Typing the command will echo your current depth'
+	syntax: '/<command>'
+	status: 1
+6:
+	tid: 5
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
+	status: 1
+7:
+	tid: 6
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
+	status: 0
+8:
+	tid: 7
+	version: 1
+	cat: 'Teleport'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
+	status: 1
+9:
+	tid: 8
+	version: 1
+	cat: 'Economy'
+	trigger: 'balance'
+	alias: 'bal, money'
+	desc: 'Gives the current balance of a player'
+	instr: 'If you specify a player you will be given the balance'
+	syntax: '/<command> [player name]'
+	status: 1
+10:
+	tid: 9
+	version: 1
+	cat: 'General'
+	trigger: 'help'
+	alias: ''
+	desc: 'This displays the help commands for essentials.'
+	instr: 'The commands shown will be limited by permissions'
+	syntax: '/<command> [searchterm [2;3;4;5; etc...]'
+	status: 1
+11:
+	tid: 10
+	version: 1
+	cat: 'General'
+	trigger: 'depth'
+	alias: ''
+	desc: 'Displays your current block depth in relation to sea level'
+	instr: 'Typing the command will echo your current depth'
+	syntax: '/<command>'
+	status: 1
+12:
+	tid: 11
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
+	status: 1
+13:
+	tid: 12
+	version: 1
+	cat: 'Teleport'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
+	status: 1
+14:
+	tid: 13
+	version: 1
+	cat: 'Economy'
+	trigger: 'balance'
+	alias: 'bal, money'
+	desc: 'Gives the current balance of a player'
+	instr: 'If you specify a player you will be given the balance'
+	syntax: '/<command> [player name]'
+	status: 1
+15:
+	tid: 14
+	version: 1
+	cat: 'General'
+	trigger: 'help'
+	alias: ''
+	desc: 'This displays the help commands for essentials.'
+	instr: 'The commands shown will be limited by permissions'
+	syntax: '/<command> [searchterm [2;3;4;5; etc...]'
+	status: 1
+16:
+	tid: 15
+	version: 1
+	cat: 'General'
+	trigger: 'depth'
+	alias: ''
+	desc: 'Displays your current block depth in relation to sea level'
+	instr: 'Typing the command will echo your current depth'
+	syntax: '/<command>'
+	status: 1
+17:
+	tid: 16
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
+	status: 1
+18:
+	tid: 17
+	version: 1
+	cat: 'Teleport'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
+	status: 1
+19:
+	tid: 18
+	version: 1
+	cat: 'Economy'
+	trigger: 'balance'
+	alias: 'bal, money'
+	desc: 'Gives the current balance of a player'
+	instr: 'If you specify a player you will be given the balance'
+	syntax: '/<command> [player name]'
+	status: 0
+20:
+	tid: 19
+	version: 1
+	cat: 'General'
+	trigger: 'help'
+	alias: ''
+	desc: 'This displays the help commands for essentials.'
+	instr: 'The commands shown will be limited by permissions'
+	syntax: '/<command> [searchterm [2;3;4;5; etc...]'
+	status: 1
+21:
+	tid: 20
+	version: 1
+	cat: 'General'
+	trigger: 'depth'
+	alias: ''
+	desc: 'Displays your current block depth in relation to sea level'
+	instr: 'Typing the command will echo your current depth'
+	syntax: '/<command>'
+	status: 1
+22:
+	tid: 21
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
+	status: 1
+23:
+	tid: 22
+	version: 1
+	cat: 'Teleport'
+	trigger: 'back'
+	alias: 'return'
+	desc: 'Returns you to your last position'
+	instr: 'This command will only work after using any kind of teleport'
+	syntax: '/<command>'
+	status: 0
+24:
+	tid: 23
+	version: 1
+	cat: 'General'
+	trigger: 'help'
+	alias: ''
+	desc: 'This displays the help commands for essentials.'
+	instr: 'The commands shown will be limited by permissions'
+	syntax: '/<command> [searchterm [2;3;4;5; etc...]'
+	status: 0
+25:
+	tid: 24
+	version: 1
+	cat: 'General'
+	trigger: 'depth'
+	alias: ''
+	desc: 'Displays your current block depth in relation to sea level'
+	instr: 'Typing the command will echo your current depth'
+	syntax: '/<command>'
+	status: 0
+26:
+	tid: 25
+	version: 1
+	cat: 'General'
+	trigger: 'getpos'
+	alias: 'coords, position'
+	desc: 'Displays your current coordinate position in the world'
+	instr: 'Typing the command will echo your current position'
+	syntax: '</command> [player]'
 	status: 0
