--- a/tests/fixtures/cmd_trigger_perm_map_fixt.yml
+++ b/tests/fixtures/cmd_trigger_perm_map_fixt.yml
@@ -1,30 +1,252 @@
 1:
 	tid: 1
-	t_version: 1
+	t_version: 2
 	pid: 1
 	p_version: 2
 	status: 1
 2:
-	tid: 2
-	t_version: 1
+	tid: 1
+	t_version: 2
 	pid: 2
 	p_version: 1
 	status: 1
 3:
-	tid: 3
+	tid: 2
 	t_version: 1
 	pid: 3
 	p_version: 1
 	status: 1
 4:
-	tid: 1
+	tid: 2
 	t_version: 1
-	pid: 2
+	pid: 4
 	p_version: 1
 	status: 1
 5:
-	tid: 1
-	t_version: 2
-	pid: 1
-	p_version: 2
+	tid: 3
+	t_version: 1
+	pid: 5
+	p_version: 1
 	status: 1
+6:
+	tid: 3
+	t_version: 1
+	pid: 6
+	p_version: 1
+	status: 1
+7:
+	tid: 4
+	t_version: 1
+	pid: 7
+	p_version: 1
+	status: 1
+8:
+	tid: 5
+	t_version: 1
+	pid: 8
+	p_version: 1
+	status: 1
+9:
+	tid: 5
+	t_version: 1
+	pid: 9
+	p_version: 1
+	status: 1
+10:
+  tid: 6
+  t_version: 1
+  pid: 10
+  p_version: 1
+  status: 0
+11:
+	tid: 7
+	t_version: 1
+	pid: 11
+	p_version: 1
+	status: 1
+12:
+	tid: 7
+	t_version: 1
+	pid: 12
+	p_version: 1
+	status: 1
+13:
+	tid: 8
+	t_version: 1
+	pid: 13
+	p_version: 1
+	status: 1
+14:
+	tid: 8
+	t_version: 1
+	pid: 14
+	p_version: 1
+	status: 1
+15:
+	tid: 9
+	t_version: 1
+	pid: 15
+	p_version: 1
+	status: 1
+16:
+	tid: 9
+	t_version: 1
+	pid: 16
+	p_version: 1
+	status: 1
+17:
+	tid: 10
+	t_version: 1
+	pid: 17
+	p_version: 1
+	status: 1
+18:
+	tid: 11
+	t_version: 1
+	pid: 18
+	p_version: 1
+	status: 1
+19:
+	tid: 11
+	t_version: 1
+	pid: 19
+	p_version: 1
+	status: 1
+20:
+	tid: 12
+	t_version: 1
+	pid: 20
+	p_version: 1
+	status: 1
+21:
+	tid: 12
+	t_version: 1
+	pid: 21
+	p_version: 1
+	status: 0
+22:
+	tid: 13
+	t_version: 1
+	pid: 22
+	p_version: 1
+	status: 1
+23:
+	tid: 13
+	t_version: 1
+	pid: 23
+	p_version: 1
+	status: 1
+24:
+	tid: 14
+	t_version: 1
+	pid: 24
+	p_version: 1
+	status: 1
+25:
+	tid: 14
+	t_version: 1
+	pid: 25
+	p_version: 1
+	status: 1
+26:
+	tid: 15
+	t_version: 1
+	pid: 26
+	p_version: 1
+	status: 1
+27:
+	tid: 16
+	t_version: 1
+	pid: 27
+	p_version: 1
+	status: 1
+28:
+	tid: 16
+	t_version: 1
+	pid: 28
+	p_version: 1
+	status: 1
+29:
+	tid: 17
+	t_version: 1
+	pid: 29
+	p_version: 1
+	status: 1
+30:
+	tid: 18
+	t_version: 1
+	pid: 30
+	p_version: 1
+	status: 0
+31:
+	tid: 18
+	t_version: 1
+	pid: 31
+	p_version: 1
+	status: 0
+32:
+	tid: 19
+	t_version: 1
+	pid: 32
+	p_version: 1
+	status: 1
+33:
+	tid: 19
+	t_version: 1
+	pid: 33
+	p_version: 1
+	status: 1
+34:
+	tid: 20
+	t_version: 1
+	pid: 34
+	p_version: 1
+	status: 1
+35:
+	tid: 21
+	t_version: 1
+	pid: 35
+	p_version: 1
+	status: 1
+36:
+	tid: 21
+	t_version: 1
+	pid: 36
+	p_version: 1
+	status: 1
+37:
+	tid: 22
+	t_version: 1
+	pid: 37
+	p_version: 1
+	status: 0
+38:
+	tid: 23
+	t_version: 1
+	pid: 38
+	p_version: 1
+	status: 0
+39:
+	tid: 24
+	t_version: 1
+	pid: 39
+	p_version: 1
+	status: 0
+40:
+	tid: 25
+	t_version: 1
+	pid: 40
+	p_version: 1
+	status: 0
+41:
+	tid: 26
+	t_version: 1
+	pid: 41
+	p_version: 1
+	status: 0
+42:
+	tid: 27
+	t_version: 1
+	pid: 42
+	p_version: 1
+	status: 0
